update endpoint, swagger, mongo
